# pytest-ansible-units

./: .darglint  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .yamllint.yaml  README.md  cspell.config.yaml  mypy.ini  pyproject.toml  setup.cfg
.config/: dictionary.txt
.github/workflows/: collection.yml
pytest-ansible-units/: README.rst  pytest_ansible_units.py  setup.py  tox.ini
pytest-ansible-units/docs/: conf.py  index.rst
pytest-ansible-units/tests/: test_ansible_units.py
src/pytest_ansible_units/: __init__.py
